Fixed sidebar layout problems

--- a/web/htdocs/check_mk.css
+++ b/web/htdocs/check_mk.css
@@ -258,10 +258,10 @@ div.snapin div.content {
     background-repeat: repeat-y;
     background-position: left;
     padding-top: 10px;
-    padding-left: 15px;
+    padding-left: 12px;
     padding-right: 12px;
     padding-bottom: 5px;
-    width: 260px;
+    width: 240px;
 }
 
 div.snapin div.foot {
